# ngmm_tools

./: Dockerfile  README.md  pyproject.toml
Analyses/Data_Preparation/: __init__.py  compute_celldistance_matrix.ipynb
Analyses/Regression/: nonerg_gmm_regression_type1_cmdstan.ipynb  nonerg_gmm_regression_type1_pystan.ipynb
