[tool.poetry]
name = "ngmm-tools"
version = "0.1.0"
description = "This repository contains software tools for developing Nonergodic Ground Motion Models (NGMMs) based on the varying coefficient (Landwehr et al., 2016) and cell-specific anelastic attention approach (Dawood and Rodriguez‐Marek, 2013). Developed tools are available for R using the statistical package (R-INLA, https://www.r-inla.org/) and in python using the CMDSTAN and PYSTAN interface packages for the Bayesian software (Stan, https://mc-stan.org/). Documentation and detailed instructions on the use of the developed tools is provided in Lavrentiadis et al., 2022a GIRS report. A general introduction and considerations for the development of NGMMs are presented in Lavrentiadis et al., 2022b."
authors = ["UCLA NHR3 <user@example.com>"]
readme = "README.md"
packages = [{include = "Analyses/Python_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
pyproj = "^3.6.1"
geopy = "^2.4.1"
cartopy = "^0.22.0"
gdown = "^5.1.0"
arviz = "^0.17.0"
cmdstanpy = "^1.2.1"
scipy = "1.12"
cython = "^3.0.10"


[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
